<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_edit"
        android:title="@string/menu_edit" />
    <item android:id="@+id/action_call_mode" android:title="@string/call_mode_title" />
    <item
        android:id="@+id/action_message_alerts"
        android:title="@string/message_alerts_menu">
        <menu>
            <item
                android:id="@+id/action_whatsapp_alert"
                android:title="@string/message_app_whatsapp" />
            <item
                android:id="@+id/action_google_messages_alert"
                android:title="@string/message_app_google_messages" />
            <item
                android:id="@+id/action_telegram_alert"
                android:title="@string/message_app_telegram" />
        </menu>
    </item>
    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_delete" />
</menu>
